--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
 #Grails Metadata file
-#Wed Aug 28 11:46:21 CEST 2013
+#Tue Sep 03 10:37:01 CEST 2013
 app.grails.version=2.2.4
 app.name=capptain-video-push-demo-frontend
 app.version=0.1
+plugins.cookie=0.4
+plugins.db-util=0.4
